force-app/main/default/objects/Mapping_Field__c/Mapping_Field__c.object-meta.xml
<CustomObject>
    <label>Mapping Field</label>
    <nameField>
        <displayFormat>MFID-{00000}</displayFormat>
        <label>Mapping Field Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapping Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>