force-app/main/default/objects/Mapping_Field__c/fields/Mapping_Reference__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapping Reference</label>
    <referenceTo>Mapping_Reference__c</referenceTo>
    <relationshipLabel>Mapping Fields</relationshipLabel>
    <relationshipName>Mapping_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>