force-app/main/default/objects/Mapping_Field__c/fields/Source_Fields__c.field-meta.xml
<CustomField>
    <fullName>Source_Fields__c</fullName>
    <label>Source Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>